add links to the info button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">Modern Art UI</string>
     <string name="more_info">More information</string>
     <string name="cool_features">Cool features!</string>
-    <string name="cool_features_list">Other than the requirements, this app has 6 awesome features:
+    <string name="cool_features_list">
+        Other than the requirements, this app has 6 awesome features:
         \n\n1. Layout is different every time!
         \n\n2. Colors are random!
         \n\n3. "Refresh" button to generate a new painting.
@@ -14,10 +15,15 @@
     <string name="wow">Wow!</string>
     <string name="new_painting">New painting!</string>
     <string name="share_painting">Share painting!</string>
-    <string name="information">Inspired by the works of artists such as Piet Mondrian and Ben Nickolson\n\nClick below to learn more!</string>
+    <string name="share_text">I painted this masterpiece with the ModernArt app - get it from http://tiny.cc/modernart</string>
+    <string name="information">
+        Inspired by the works of artists such as Piet Mondrian and Ben Nickolson
+        \n\nClick below to learn more!
+        \n\nCode is at https://github.com/anisabboud/modern-art/
+        \n\n.apk is at http://tiny.cc/modernart</string>
     <string name="visit_moma">Visit MOMA</string>
     <string name="not_now">Not Now</string>
-    
+
     <item type="id" name="COLOR1" />
     <item type="id" name="COLOR2" />
     <item type="id" name="MIXED_COLOR" />
